--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0</version>
   <artifactId>ControleFinanceiroFacil</artifactId>
   <dependencies>
+    <!--Import de bibliotecas  VEJA : https://mvnrepository.com/-->
+
+    <!--SPARK-->
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
@@ -17,7 +20,42 @@
       <artifactId>spark-template-freemarker</artifactId>
       <version>2.0.0</version>
     </dependency>
-   
+    <!--SPARK-->
+    <!--Hibernate-->
+      <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.9.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>4.3.9.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.5.6-Final</version>
+    </dependency>
+    <!--Hibernate-->
+
+    <!--JDBC BANCO DE DADOS-->
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>1.1.7</version>
+    </dependency>
+    <!--JDBC BANCO DE DADOS-->
+
+    <!--JSON SIMPLE-->
+    <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+	</dependency>
+	 <!--JSON SIMPLE-->
     
   </dependencies>
   <build>
