--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
     	<version>1.1.1</version>
 	</dependency>
 	 <!--JSON SIMPLE-->
+   <!--COmmonsIO-->
+   <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+  </dependency>
+     <!--COmmonsIO-->
+
     
   </dependencies>
   <build>
